deploy/k8s/overlays/prod/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-elephantalpha-live
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: elephantalpha.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-elephantalpha
                port:
                  number: 80
