deploy/k8s/overlays/prod/ingress-www-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-elephantalpha-www-redirect
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://elephantalpha.lol"
spec:
  ingressClassName: nginx
  tls:
    - secretName: app-elephantalpha-www-live-tls
      hosts:
        - www.elephantalpha.lol
  rules:
    - host: www.elephantalpha.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-elephantalpha
                port:
                  number: 80
